# datasets

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dvc.yaml  pyproject.toml
.dvc/: config
cifar/: .gitignore  cifar-10-python.tar.gz.dvc  cifar-100-python.tar.gz.dvc  dvc.yaml
cifar/archives/: cifar-100-python.tar.gz.dvc
coco/: .gitignore
coco/annotations/: .gitignore
coco/archives/: panoptic_annotations_trainval2017.zip.dvc  train2017.zip.dvc  val2017.zip.dvc
datasets/cifar/: README.md
datasets/cifar/archives/: .gitignore  cifar-10-python.tar.gz.dvc
datasets/coco/: .gitignore  README.md  dvc.yaml
datasets/coco/annotations/: .gitignore
datasets/coco/archives/: .gitignore  annotations_trainval2017.zip.dvc  panoptic_annotations_trainval2017.zip.dvc  stuff_annotations_trainval2017.zip.dvc
datasets/coco/scripts/: unzip-panoptic  unzip-stuff
datasets/finewiki/data/enwiki/: .gitignore  000_00000.parquet.dvc  000_00001.parquet.dvc  000_00002.parquet.dvc  000_00003.parquet.dvc  (+5 more)
datasets/hdvila/: .gitignore  dvc.yaml
datasets/hdvila/archives/: .gitignore  hdvila100m.zip.dvc
datasets/imagenet/: .gitignore  ILSVRC.dvc  LOC_sample_submission.csv.dvc  LOC_train_solution.csv.dvc  LOC_val_solution.csv.dvc  README.md
datasets/imagenet-100/: .gitignore  LOC_synset_mapping.txt.dvc
datasets/mnist/: dvc.yaml
datasets/mnist/archives/: t10k-images-idx3-ubyte.gz.dvc  t10k-labels-idx1-ubyte.gz.dvc  train-images-idx3-ubyte.gz.dvc
datasets/mono-vo/: .gitignore  dvc.yaml
datasets/mono-vo/archives/: .gitignore  all_calib_sequences.zip.dvc  all_sequences.zip.dvc
datasets/mono-vo/scripts/: unpack
datasets/nyu-depth-v2/: .gitignore  README.md  nyu_depth_v2_labeled.mat.dvc
datasets/open-images-v7/: README.md
datasets/open-images-v7/metadata/: detection_classes.csv.dvc  segmentation_classes.txt.dvc
datasets/open-images-v7/validation/: data.dvc
datasets/voc/: dvc.yaml
datasets/voc/archives/: .gitignore  VOCtrainval_11-May-2012.tar.dvc
datasets/wikipedia/: README.md  enwiki-20250801-pages-articles-multistream-index.txt.bz2.dvc  enwiki-20250801-pages-articles-multistream.xml.bz2.dvc  frwiki-20250801-pages-articles-multistream-index.txt.bz2.dvc  frwiki-20250801-pages-articles-multistream.xml.bz2.dvc
datasets/wikitext-103-v1/: data.dvc
finewiki/: README.md
finewiki/data/enwiki/: 000_00000.parquet.dvc  000_00001.parquet.dvc  000_00002.parquet.dvc  000_00003.parquet.dvc  000_00004.parquet.dvc  000_00005.parquet.dvc  000_00006.parquet.dvc  000_00007.parquet.dvc  000_00008.parquet.dvc
finewiki/data/frwiki/: .gitignore  000_00000.parquet.dvc  000_00001.parquet.dvc  000_00002.parquet.dvc  000_00003.parquet.dvc  000_00004.parquet.dvc  000_00005.parquet.dvc
hdvila/: .gitignore  README.md  hdvila100m.zip.dvc
hdvila/archives/: hdvila100m.zip.dvc
imagenet/: LOC_synset_mapping.txt.dvc  data.dvc  dvc.yaml
imagenet-100/: ILSVRC.dvc  LOC_train_solution.csv.dvc  LOC_val_solution.csv.dvc  data.dvc
mnist/: .gitignore  README.md  dvc.yaml  t10k-images-idx3-ubyte.gz.dvc  t10k-labels-idx1-ubyte.gz.dvc  train-images-idx3-ubyte.gz.dvc  train-labels-idx1-ubyte.gz.dvc
mnist/archives/: .gitignore  train-labels-idx1-ubyte.gz.dvc
mono-vo/: README.md
mono-vo/scripts/: unpack
open-images-v7/metadata/: .gitignore  segmentation_classes.txt.dvc
open-images-v7/test/: data.dvc
open-images-v7/test/labels/: image_ids.csv.dvc
open-images-v7/train/: data.dvc
open-images-v7/train/labels/: .gitignore  image_labels.csv.dvc
open-images-v7/validation/labels/: detections.csv.dvc  image_labels.csv.dvc
scripts/: create_in1k_subset.py  get_ade20k.py  get_cifar.py  get_coco.py  get_doclaynet.py  get_fineweb_edu.py  get_imagenet.py  get_mip_nerf360.py  get_mnist.py  get_mono_vo.py  get_nyu_depth_v2.py  get_open_images_v7.py  get_openwebtext.py  get_pexels_meta.py  get_tiny_stories.py  get_uvdoc.py  get_voc.py  get_vpt.py  get_wiki.py  in1k_subset.py  preprocess_fineweb_edu.py  preprocess_openwebtext.py  resize_in1k.py  tokenize_dataset.py  wiki_to_parquet.py
scripts/utils/: __init__.py  tokenize_text_dataset.py
src/datasets/: cifar.py  imagenet.py  nyu_depth_v2.py  nyu_depth_v2.yml  voc copy.py  voc.py
src/datasets/coco/: coco_stuff.yml  semantic.py
src/datasets/meta/: colors.npy  colors.py  panoptic_meta.py  seg_meta.py  utils.py
src/rsrch/data/: utils.py
src/rsrch_data/: __init__.py  ade20k.py  ade20k.yml  cifar.py  cifar100.yml  fineweb.py  imagenet.py  mip_nerf360.py  mnist.py  mnist.yml  nyu_depth_v2.py  openwebtext.py  parquet.py  pexels_meta.py  registry.py  tiny_stories.py  tokens_bin.py  types.py  voc.py  voc.yml  wiki.py  wikitext.py
src/rsrch_data/_colmap/: read_write_model.py
src/rsrch_data/cifar/: __init__.py  _cifar.py  setup.py
src/rsrch_data/coco/: __init__.py  coco.yml  coco_panoptic.yml  detection.py  instances.py  panoptic.py  semantic.py  setup.py  stuff.py
src/rsrch_data/fineweb/: __init__.py  _fineweb.py  setup.py
src/rsrch_data/fineweb2/: __init__.py  _fineweb2.py  setup.py
src/rsrch_data/finewiki/: __init__.py  _finewiki.py  setup.py
src/rsrch_data/hdvila/: setup.py
src/rsrch_data/imagenet/: __init__.py  _imagenet.py  setup.py  subsets.py
src/rsrch_data/meta/: __init__.py  cls_meta.py  panoptic_meta.py  seg_meta.py
src/rsrch_data/mnist/: setup.py
src/rsrch_data/mono_vo/: setup.py
src/rsrch_data/nyu_depth_v2/: __init__.py  _nyu_depth_v2.py  setup.py
src/rsrch_data/open_images_v7/: setup.py
src/rsrch_data/types/: __init__.py  image_cls.py  object_det.py  panoptic_seg.py  sem_seg.py  utils.py
src/rsrch_data/utils/: colors.py  download.py  hf.py  misc.py  parquet.py
src/rsrch_data/voc/: setup.py
src/rsrch_data/wiki/: __init__.py  _wiki.py  setup.py
tools/: view_dataset.py
voc/: .gitignore  README.md  VOCtrainval_11-May-2012.tar.dvc  dvc.yaml
voc/archives/: .gitignore
wikipedia/: .gitignore  enwiki-20250801-pages-articles-multistream-index.txt.bz2.dvc  frwiki-20250801-pages-articles-multistream-index.txt.bz2.dvc  frwiki-20250801-pages-articles-multistream.xml.bz2.dvc
(+50 files in other folders)
