[project]
name = "datasets"
version = "0.1.0"
description = "DVC-tracked datasets repo & data loaders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.10.0",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "h5py>=3.15.1",
    "kaggle>=1.7.4.5",
    "numpy<2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyarrow>=22.0.0",
    "pycocotools>=2.0.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rsrch_data = ["**/*.yml"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "scipy>=1.15.3",
]
