[project]
name = "rsrch-data"
version = "0.1.0"
description = "DVC-tracked datasets repo & data loaders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datatrove>=0.3.0",
    "h5py>=3.15.1",
    "hf-xet>=1.2.0",
    "mwparserfromhell>=0.7.2",
    "numpy<2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyarrow>=22.0.0",
    "pycocotools>=2.0.10",
    "pydantic>=2.12.3",
    "ruamel-yaml>=0.18.16",
    "tokenizers>=0.23.1",
    "tyro>=1.0.8",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "scipy>=1.15.3",
    "dvc-s3>=3.2.2",
    "kaggle>=1.7.4.5",
    "pre-commit>=4.5.1",
    "ruff>=0.12.12",
    "fiftyone>=1.16.0",
    "rerun-sdk>=0.23.1",
    "gdown>=6.1.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = ["src/rsrch_data/_colmap/*"]

[tool.ruff.format]
docstring-code-format = true
exclude = ["ext/*", "src/rsrch_data/_colmap/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",    # print() — intentional for CLI / training progress output
    "S301",    # pickle.load — we only load our own trusted checkpoints
    "TD002",   # TODO missing author — plain TODOs are fine here
    "TD003",   # TODO missing issue link — plain TODOs are fine here
    "FIX002",  # TODO comment — intentional notes, not blocking issues
    "RUF002",  # Ambiguous × in docstrings — intentional mathematical notation
    "ANN401",  # Any for JAX/nnx pytrees — no narrower public type available
    "ANN003",  # **kwargs type — forwarded to GPTConfig, not annotatable narrowly
    "ANN204",  # __init__ return type — always None, noise
    "D105",    # magic method docstrings — behavior defined by Python data model
    "D107",    # __init__ docstring — covered by class-level docstring
    "BLE001",  # Blind except — required for JAX implementation dispatch fallback
    "RET504",  # Assignment before return — intentional in residual block pattern
    "PLR0913", # Too many arguments — scaling law formulas need all parameters
    "PLR2004", # Magic value — p.ndim >= 2 is domain-idiomatic for weight matrices
    "PLC0415", # Import not at top-level — intentional lazy import for optional deps
    "INP001",  # ... is part of an implicit namespace package.
    "D203",    # one-blank-line-before-class — conflicts with D211 (no-blank-line-before-class)
    "D213",    # multi-line-summary-second-line — conflicts with D212 (multi-line-summary-first-line)
    "COM812",  # missing-trailing-comma — conflicts with ruff formatter
    "FBT",     # Boolean traps
]
